--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,8 @@ build:
 requirements:
     build:
         - cmake
-        - compiler('c')
-        - compiler('cxx')
+        - {{ compiler('c') }}
+        - {{ compiler('cxx') }}
 
 test:
     commands:
