--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,7 @@ test:
 about:
     home: https://github.com/akheron/jansson
     license: MIT
+    license_file: LICENSE
     summary: 'Jansson is a C library for encoding, decoding and manipulating JSON data.'
 
 extra:
