--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,35 +1,39 @@
-# Jinja variables help maintain the recipe as you'll update the version only here.
-{% set version = "2.11" %}
+{% set version = "2.13.1" %}
 
 package:
-    name: jansson
-    version: {{ version }}
+  name: jansson
+  version: {{ version }}
 
 source:
-    fn: jansson-{{ version }}.tar.gz
-    url: http://www.digip.org/jansson/releases/jansson-{{ version }}.tar.gz
-    sha1: 0c99636416499960214ce6c095d26af541d3c244
+  url: https://github.com/akheron/jansson/archive/v{{ version }}.tar.gz
+  sha256: f22901582138e3203959c9257cf83eba9929ac41d7be4a42557213a22ebcc7a0
 
 build:
-    number: 1001
+  number: 0
+  run_exports:
+    - {{ pin_subpackage('jansson', max_pin='x') }}
 
 requirements:
-    build:
-        - make
-        - cmake
-        - {{ compiler('c') }}
-    host:
+  build:
+    - automake
+    - autoconf
+    - libtool
+    - make
+    - {{ compiler('c') }}
+  host:
 
 test:
-    commands:
-        - test -f ${PREFIX}/lib/libjansson.a  # [unix]
+  commands:
+    - test ! -f ${PREFIX}/lib/libjansson.a  # [unix]
+    - test -f ${PREFIX}/lib/libjansson${SHLIB_EXT}  # [unix]
 
 about:
-    home: https://github.com/akheron/jansson
-    license: MIT
-    license_file: LICENSE
-    summary: 'Jansson is a C library for encoding, decoding and manipulating JSON data.'
+  home: https://github.com/akheron/jansson
+  license: MIT
+  license_file: LICENSE
+  summary: 'Jansson is a C library for encoding, decoding and manipulating JSON data.'
 
 extra:
-    recipe-maintainers:
-        - mariusvniekerk
+  recipe-maintainers:
+    - mariusvniekerk
+    - xhochy
