--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,10 +16,10 @@ build:
 requirements:
   build:
     - gnuconfig   # [unix]
-    - automake  # [not win]
-    - autoconf  # [not win]
-    - libtool   # [not win]
-    - make      # [not win]
+    - automake  # [unix]
+    - autoconf  # [unix]
+    - libtool   # [unix]
+    - make      # [unix]
     - cmake     # [win]
     - ninja     # [win]
     - {{ compiler('c') }}
