--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - cmake     # [win]
     - ninja     # [win]
     - {{ compiler('c') }}
+    - {{ stdlib('c') }}
   host:
 
 test:
