--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,19 +9,14 @@ source:
   sha256: 979210eaffdffbcf54cfc34d047fccde13f21b529a381df26db871d886f729a4
 
 build:
-  number: 0
+  number: 1
   run_exports:
     - {{ pin_subpackage('jansson', max_pin='x') }}
 
 requirements:
   build:
-    - gnuconfig   # [unix]
-    - automake  # [unix]
-    - autoconf  # [unix]
-    - libtool   # [unix]
-    - make      # [unix]
-    - cmake     # [win]
-    - ninja     # [win]
+    - cmake     
+    - ninja     
     - {{ compiler('c') }}
     - {{ stdlib('c') }}
   host:
